# ork

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  Polyglot Workflow Example.md  README.md  REVIEW_GUIDE.md  TODO.md  problems.md
.github/workflows/: ci.yml
crates/ork/: .dockerignore  Cargo.toml  README.md
crates/ork-cli/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  schema.sql  test-local.sh
crates/ork-cli/migrations/: 003_add_indexes.sql  004_rename_executor_agnostic.sql  006_workflow_tasks.sql  007_add_task_logs.sql  009_add_deferred_jobs.sql
crates/ork-cli/perf-configs/: heavy.yaml  memory.yaml  quick.yaml
crates/ork-cli/scripts/: dump-schema.sh  test-e2e.sh  test-load.sh
crates/ork-cli/src/: cli.rs  main.rs
crates/ork-cli/src/commands/: create_workflow.rs  create_workflow_yaml.rs  delete_workflow.rs  execute.rs  init.rs  list_workflows.rs  mod.rs  run.rs  run_workflow.rs  serve.rs  status.rs  tasks.rs  trigger.rs  validate_workflow.rs
crates/ork-cli/test-scripts/: example-task.sh  perf-task.sh
crates/ork-cli/tests/: main_entrypoint_test.rs
crates/ork-cloud-run/: .gitignore  Cargo.toml  Dockerfile  PERFORMANCE.md  docker-compose.yml  justfile
crates/ork-cloud-run/migrations/: 002_add_executor_type.sql
crates/ork-cloud-run/perf-configs/: heavy.yaml  latency.yaml  memory.yaml  quick.yaml  standard.yaml
crates/ork-cloud-run/scripts/: test-e2e.sh  test-load.sh
crates/ork-cloud-run/src/: cloud_run.rs  config.rs  db.rs  main.rs  models.rs  process_executor.rs  scheduler.rs
crates/ork-cloud-run/src/executors/: cloud_run.rs  manager.rs  mod.rs  process.rs
crates/ork-cloud-run/test-scripts/: perf-task.sh
crates/ork-core/: Cargo.toml
crates/ork-core/src/: compiled.rs  config.rs  database.rs  error.rs  executor.rs  executor_manager.rs  job_tracker.rs  lib.rs  models.rs  models_v2.rs  schedule_processor.rs  scheduler.rs  task_execution.rs  triggerer.rs  types.rs  worker_client.rs  workflow.rs
crates/ork-core/src/compiled/: tests.rs
crates/ork-core/src/job_tracker/: tests.rs
crates/ork-core/src/job_tracker/gcp/: bigquery.rs  cloudrun.rs  dataproc.rs  mod.rs
crates/ork-core/src/scheduler/: processing.rs
crates/ork-core/src/services/: workflow_yaml.rs
crates/ork-core/src/task_execution/: tests.rs
crates/ork-core/tests/: compiled_workflow_test.rs  dag_execution_test.rs  deferrables_test.rs  pause_resume_test.rs  schedule_processor_test.rs  scheduler_channel_behavior_test.rs  scheduler_processing_behavior_test.rs  scheduler_retry_fallback_test.rs  scheduler_startup_test.rs  scheduler_upstream_output_error_test.rs  sqlite_deferred_jobs_test.rs  triggerer_behavior_test.rs  type_extraction_test.rs
crates/ork-executors/: Cargo.toml
crates/ork-executors/runtime/python/: inspect_task.py  run_task.py
crates/ork-executors/src/: cloud_run.rs  lib.rs  library.rs  manager.rs  process.rs  python_runtime.rs  worker.rs
crates/ork-executors/src/process/: tests.rs
crates/ork-executors/tests/: test_library.rs
crates/ork-runner/: Cargo.toml
crates/ork-runner/src/: executor.rs  lib.rs  scheduler.rs
crates/ork-runner/src/runner/: helpers.rs  mod.rs  run.rs  types.rs
crates/ork-sdk-rust/: Cargo.toml
crates/ork-sdk-rust/src/: deferrables.rs  lib.rs  lib_tests.rs
crates/ork-state/: Cargo.toml  build.rs
crates/ork-state/migrations/: 005_add_dag_support.sql  008_add_task_retries_timeouts.sql  009_add_workflow_schedules.sql  010_add_pause_status.sql  011_add_task_signatures.sql  012_add_deferred_jobs.sql  013_add_workflow_snapshots.sql  014_workflow_snapshots_unique_hash.sql
crates/ork-state/migrations_sqlite/: 001_init.sql  002_add_task_logs.sql  003_add_task_retries_timeouts.sql  004_add_workflow_schedules.sql  005_add_pause_status.sql  006_add_task_signatures.sql  007_add_deferred_jobs.sql  008_add_workflow_snapshots.sql  009_workflow_snapshots_unique_hash.sql
crates/ork-state/src/: delegation.rs  file.rs  file_database.rs  lib.rs  memory.rs  object_store.rs  postgres.rs  sqlite.rs
crates/ork-state/src/file_database/: core.rs  deferred_jobs.rs  runs.rs  tasks.rs  workflows.rs
crates/ork-state/src/postgres/: core.rs  deferred_jobs.rs  runs.rs  tasks.rs  workflows.rs
crates/ork-state/src/sqlite/: core.rs  deferred_jobs.rs  runs.rs  tasks.rs  workflows.rs
crates/ork-state/tests/: postgres_backend_edge_test.rs  postgres_backend_test.rs  sqlite_backend_edge_test.rs
crates/ork-web/: Cargo.toml
crates/ork-web/src/: api.rs  api_helpers.rs  api_realtime.rs  api_routes.rs  handlers.rs  lib.rs  main.rs  workflow_tasks.rs
crates/ork-web/tests/: api_db_error_paths_test.rs  api_endpoints_test.rs  api_error_paths_test.rs  api_realtime_test.rs  test_snapshot_tasks.rs
crates/ork-web/ui/: index.html
crates/ork-worker/: Cargo.toml
crates/ork-worker/src/: compile.rs  execute.rs  main.rs
crates/ork/migrations/: 001_init.sql
crates/ork/src/: main.rs
docs/: INDEX.md  context.md  dbt.md  deployment.md  failure_handling.md  operations.md  parallelization.md  tasks.md  type_schemas.md
docs/comparisons/: .gitignore  10_ork_proposed_yaml.yaml  11_ork_proposed_hybrid.py  1_airflow_demo.py  2_prefect_demo.py  (+17 more)
docs/comparisons/dagster/: README.md  definitions.py  justfile  pyproject.toml
docs/comparisons/dagster/jobs/: conditional_branching.py  data_pipeline.py  parallel_tasks.py
docs/comparisons/kedro/: README.md  justfile  pyproject.toml
docs/comparisons/kedro/conf/base/: catalog.yml
docs/comparisons/kedro/pipelines/: conditional_branching.py  data_pipeline.py  parallel_tasks.py
docs/comparisons/kedro/src/kedro_examples/: pipeline_registry.py
examples/workflows/polyglot/rust_tasks/: Cargo.toml
examples/workflows/polyglot/rust_tasks/src/: lib.rs  main.rs
python-sdk/: README.md  pyproject.toml
python-sdk/ork_sdk/: __init__.py  deferrables.py
scripts/: check-docs.py  check-loc.py  check-review.py  dev-up-sqlite.sh  dev-up.sh  example-run.sh  prepare-example-env.sh  publish-prep.sh  run_python_task.py
src/: cloud_run.rs  db.rs  main.rs  models.rs  scheduler.rs
(+219 files in other folders)
