[workspace]
members = [
    "crates/ork-cli",
    "crates/ork-web",
    "crates/ork-core",
    "crates/ork-state",
    "crates/ork-runner",
    "crates/ork",
    "crates/ork-executors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "query",
] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
thiserror = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "time",
    "sync",
    "net",
] }
tower-http = { version = "0.5", default-features = false, features = [
    "cors",
    "trace",
] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
