[workspace]
members = [
    "crates/ork-cli",
    "crates/ork-web",
    "crates/ork-core",
    "crates/ork-state",
    "crates/ork-executors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "query",
    "ws",
] }
async-trait = "0.1"
chrono = { version = "0.4.43", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5.56", features = ["derive"] }
fs2 = "0.4"
futures = "0.3"
gcp_auth = "0.12"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
sqlx = { version = "0.8", default-features = false }
sysinfo = "0.38"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "time",
    "sync",
    "net",
] }
tower-http = { version = "0.6", default-features = false, features = [
    "cors",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.5"
uuid = { version = "1.20.0", features = ["v4"] }
