[workspace]
members = [
    "crates/ork-cli",
    "crates/ork-web",
    "crates/ork-core",
    "crates/ork-state",
    "crates/ork-executors",
    "crates/ork-sdk-rust",
    "crates/ork-worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/gajop/ork"
homepage = "https://github.com/gajop/ork"
documentation = "https://github.com/gajop/ork/tree/main/docs"
rust-version = "1.85"
authors = ["Ork contributors"]

[workspace.dependencies]
ork-core = { version = "0.1.0", path = "crates/ork-core" }
ork-state = { version = "0.1.0", path = "crates/ork-state" }
ork-executors = { version = "0.1.0", path = "crates/ork-executors" }
ork-web = { version = "0.1.0", path = "crates/ork-web" }
ork-sdk-rust = { version = "0.1.0", path = "crates/ork-sdk-rust" }
ork-worker = { version = "0.1.0", path = "crates/ork-worker" }
ork-cli = { version = "0.1.0", path = "crates/ork-cli" }
anyhow = "1.0.101"
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "query",
    "ws",
] }
async-trait = "0.1"
chrono = { version = "=0.4.39", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5.57", features = ["derive"] }
fs2 = "0.4"
futures = "0.3"
gcp_auth = "0.12"
google-cloud-bigquery = "0.15.0"
google-cloud-run-v2 = "1.5.0"
google-cloud-dataproc-v1 = "1.5.0"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false }
sysinfo = "0.38.1"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "time",
    "sync",
    "net",
] }
tower-http = { version = "0.6", default-features = false, features = [
    "cors",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.5"
uuid = { version = "1.20.0", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
url = "2.5"

[workspace.lints.clippy]
too_many_arguments = "allow"

[patch.crates-io]
ork-core = { path = "crates/ork-core" }
ork-state = { path = "crates/ork-state" }
ork-executors = { path = "crates/ork-executors" }
ork-web = { path = "crates/ork-web" }
ork-sdk-rust = { path = "crates/ork-sdk-rust" }
ork-worker = { path = "crates/ork-worker" }
ork-cli = { path = "crates/ork-cli" }
