[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ork-sdk"
version = "0.1.0"
description = "Ork SDK for Python - Write workflow tasks with deferrables support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["workflow", "orchestration", "ork", "deferrables"]
authors = [
    {name = "Ork Project"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/ork"
Repository = "https://github.com/yourusername/ork"
Documentation = "https://github.com/yourusername/ork/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["ork_sdk*"]
