[package]
name = "ork-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ork"
path = "src/main.rs"

[[bin]]
name = "perf-test"
path = "src/bin/perf-test.rs"

[features]
default = ["postgres", "process"]
# Database backends
postgres = ["ork-state/postgres"]
sqlite = ["ork-state/sqlite"]
# Executors
process = ["ork-executors/process"]
cloudrun = ["ork-executors/cloudrun"]

[dependencies]
# Core orchestration
ork-core = { path = "../ork-core", features = ["sqlx"] }
ork-state = { path = "../ork-state" }
ork-executors = { path = "../ork-executors" }

# CLI & async
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Other
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = "0.33"

# For perf-test binary
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Legacy runner (to be deprecated)
ork-runner = { path = "../ork-runner" }
