[package]
name = "ork-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ork"
path = "src/main.rs"

[[bin]]
name = "perf-test"
path = "src/bin/perf-test.rs"

[features]
default = ["postgres", "process", "library"]
# Database backends
postgres = ["ork-state/postgres"]
sqlite = ["ork-state/sqlite"]
# Executors
process = ["ork-executors/process"]
cloudrun = ["ork-executors/cloudrun"]
library = ["ork-executors/library"]

[dependencies]
# Core orchestration
ork-core = { path = "../ork-core", features = ["sqlx"] }
ork-state = { path = "../ork-state" }
ork-executors = { path = "../ork-executors" }

# CLI & async
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }

# Other
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }

# For perf-test binary
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

[lints]
workspace = true
