[package]
name = "ork-cli"
version.workspace = true
edition.workspace = true
description = "Ork CLI and scheduler host process"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["workflow", "orchestration", "scheduler", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ork"
path = "src/main.rs"

[[bin]]
name = "perf-test"
path = "src/bin/perf-test.rs"

[features]
default = ["postgres", "process", "library"]
# Database backends
postgres = ["ork-state/postgres"]
sqlite = ["ork-state/sqlite"]
# Executors
process = ["ork-executors/process"]
cloudrun = ["ork-executors/cloudrun"]
library = ["ork-executors/library"]

[dependencies]
# Core orchestration
ork-core = { workspace = true, features = ["sqlx"] }
ork-state = { workspace = true }
ork-executors = { workspace = true }
ork-web = { workspace = true }

# CLI & async
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }

# Other
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }

# For perf-test binary
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

[dev-dependencies]
ork-state = { workspace = true, features = ["sqlite"] }
indexmap = { workspace = true }
axum = { workspace = true }

[lints]
workspace = true
