[package]
name = "ork-cloud-run"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ork-cloud-run"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
futures = { workspace = true }
