[package]
name = "ork-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# SQL database support (for models_v2)
sqlx = { version = "0.8", optional = true, default-features = false, features = ["macros", "derive", "json"] }

# Async runtime support (always enabled - core functionality)
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
