[package]
name = "ork-core"
version.workspace = true
edition.workspace = true

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# SQL database support (for models_v2)
sqlx = { workspace = true, optional = true, features = ["macros", "derive", "json"] }

# Async runtime support (always enabled - core functionality)
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
cron = "0.12"

[dev-dependencies]
ork-state = { path = "../ork-state", features = ["sqlite"] }
ork-executors = { path = "../ork-executors", features = ["process"] }
