[package]
name = "ork-core"
version.workspace = true
edition.workspace = true

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# SQL database support (for models_v2)
sqlx = { workspace = true, optional = true, features = ["macros", "derive", "json"] }

# Async runtime support (always enabled - core functionality)
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
cron = "0.12"
dirs = "6.0.0"

# Google Cloud API clients for job tracking
google-cloud-bigquery = { workspace = true }
google-cloud-run-v2 = { workspace = true }
google-cloud-dataproc-v1 = { workspace = true }

[dev-dependencies]
ork-state = { path = "../ork-state", features = ["sqlite"] }
ork-executors = { path = "../ork-executors", features = ["process"] }
tempfile = "3.24.0"
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

[lints]
workspace = true
