[package]
name = "ork-executors"
version.workspace = true
edition.workspace = true

[features]
default = ["process"]

# Executor backends
process = []
cloudrun = ["dep:gcp_auth", "dep:reqwest"]
fargate = []  # Future
lambda = []   # Future

[dependencies]
ork-core = { path = "../ork-core" }

# Core async dependencies
tokio = { workspace = true, features = ["process", "sync", "time", "fs", "rt", "macros"] }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
tracing = { workspace = true }

# Optional: Cloud Run executor
gcp_auth = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
