[package]
name = "ork-executors"
version.workspace = true
edition.workspace = true

[features]
default = ["process", "library"]

# Executor backends
process = []
cloudrun = ["dep:gcp_auth", "dep:reqwest"]
library = ["dep:libloading"]
worker = ["dep:reqwest"]
fargate = []  # Future
lambda = []   # Future

[dependencies]
ork-core = { path = "../ork-core" }

# Core async dependencies
tokio = { workspace = true, features = ["process", "sync", "time", "fs", "rt", "macros", "io-util"] }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
tracing = { workspace = true }

# Optional: Cloud Run executor
gcp_auth = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = "6.0.0"

# Optional: Library executor
libloading = { version = "0.9.0", optional = true }
