[package]
name = "ork-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
indexmap = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
ork-core = { path = "../ork-core" }
ork-state = { path = "../ork-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
