[package]
name = "ork-runner"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
futures = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync"] }
uuid = { workspace = true, features = ["v4"] }
ork-core = { path = "../ork-core" }
ork-state = { path = "../ork-state" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
