[package]
name = "ork-state"
version.workspace = true
edition.workspace = true

[features]
default = []
postgres = ["dep:sqlx", "ork-core/sqlx"]
sqlite = ["dep:sqlx", "ork-core/sqlx"]
file = []  # File-based database implementation

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ork-core = { path = "../ork-core" }
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
fs2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }

# Optional: Database backends
sqlx = { workspace = true, optional = true, features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "macros", "migrate", "uuid", "chrono", "json"] }

[lints]
workspace = true
