[package]
name = "ork-state"
version.workspace = true
edition.workspace = true
description = "Database backends for Ork state storage"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["workflow", "orchestration", "database"]
categories = ["database", "development-tools"]

[features]
default = []
postgres = ["dep:sqlx", "ork-core/sqlx"]
sqlite = ["dep:sqlx", "ork-core/sqlx"]
file = []  # File-based database implementation

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ork-core = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
fs2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }

# Optional: Database backends
sqlx = { workspace = true, optional = true, features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "macros", "migrate", "uuid", "chrono", "json"] }

[dev-dependencies]
indexmap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true }

[lints]
workspace = true
