[package]
name = "ork-web"
version.workspace = true
edition.workspace = true

[features]
default = ["postgres"]
postgres = ["ork-state/postgres", "ork-core/sqlx"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ork-core = { path = "../ork-core", features = ["sqlx"] }
ork-state = { path = "../ork-state" }
