[package]
name = "ork-web"
version.workspace = true
edition.workspace = true

[features]
default = ["postgres"]
postgres = ["ork-state/postgres", "ork-core/sqlx"]
sqlite = ["ork-state/sqlite", "ork-core/sqlx"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ork-core = { path = "../ork-core", features = ["sqlx"] }
ork-state = { path = "../ork-state" }

[dev-dependencies]
ork-state = { path = "../ork-state", features = ["sqlite"] }
tower = { workspace = true }
tokio-tungstenite = "0.28"
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "uuid"] }

[lints]
workspace = true
