[package]
name = "ork-web"
version.workspace = true
edition.workspace = true
description = "Web UI and API server for Ork"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["workflow", "orchestration", "web"]
categories = ["web-programming", "development-tools"]

[features]
default = ["postgres"]
postgres = ["ork-state/postgres", "ork-core/sqlx"]
sqlite = ["ork-state/sqlite", "ork-core/sqlx"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ork-core = { workspace = true, features = ["sqlx"] }
ork-state = { workspace = true }

[dev-dependencies]
ork-state = { workspace = true, features = ["sqlite"] }
tower = { workspace = true }
tokio-tungstenite = "0.28"
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "uuid"] }

[lints]
workspace = true
