[package]
name = "ork-worker"
version.workspace = true
edition.workspace = true
description = "Stateless worker server for Ork compile/execute task paths"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["workflow", "orchestration", "worker"]
categories = ["network-programming", "development-tools"]

[dependencies]
ork-core = { workspace = true, features = ["sqlx"] }
ork-executors = { workspace = true, features = ["process", "library"] }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "ork-worker"
path = "src/main.rs"

[dev-dependencies]
reqwest = { workspace = true }

[lints]
workspace = true
