[package]
name = "ork"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ork"
path = "src/main.rs"

[[bin]]
name = "perf-test"
path = "src/bin/perf-test.rs"

[dependencies]
# Core dependencies
ork-core = { path = "../ork-core", features = ["async", "sqlx"] }
ork-state = { path = "../ork-state", features = ["postgres"] }
ork-executors = { path = "../ork-executors", features = ["process", "cloudrun"] }

tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }
sysinfo = "0.33"
serde_yaml = "0.9"

# For perf-test binary (still uses direct sqlx)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
